# multicam-retail-analytics

./: .env.example  .gitignore  Makefile  README.md  TASKS.md  alembic.ini  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
analytics/: engine.py  zones.py
backend/: requirements.txt
backend/alembic/: env.py
backend/app/: main.py
configs/: app.yaml  cameras.example.yaml  classes.yaml
database/: init.sql
datasets/: README.md
deployment/: README.md
docker/: backend.Dockerfile  frontend.Dockerfile  vision.Dockerfile
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEMO.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  INFERENCE.md  REID.md  TRAINING.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
models/reid/: README.md
scripts/: benchmark_inference.py  calibrate_reid.py  capture_screenshots.py  dev_webhook_receiver.py  download_datasets.py  download_sample_video.py  export_onnx.py  export_reid_onnx.py  register_cameras.py  report_narrator.py  seed_db.py  train.py
streaming/: camera_worker.py  kafka_client.py
tests/: conftest.py
tests/e2e/: test_pipeline_e2e.py
tests/integration/: test_auth_api.py  test_camera_api.py  test_camera_stream.py  test_ingest_and_analytics.py  test_reid_ingest.py  test_reid_read_api.py  test_users_api.py  test_ws_auth.py
tests/unit/: test_analytics_engine.py  (+13 more)
tracking/: track_store.py  tracker.py
vision/: detector.py  heatmap.py  preview.py  privacy.py  reid.py  requirements.txt  video_source.py
(+48 files in other folders)
